<resources>
    <string name="app_name">FurnitureMarket</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="furniture_store">Furniture Store</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_password_again">Enter Your Password Again</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="already_have_an_account_log_in">Already Have An Account? Log In</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have An Account? Sign Up</string>
    <string name="confirmation">Confirmation</string>
    <string name="thank_you">Thank You</string>
    <string name="successfully_register">Successfully Register</string>
    <string name="long_text">congratulations your application is \n registered this application</string>
    <string name="categories">Categories</string>
    <string name="chairs">Chairs</string>
    <string name="sofa">Sofa</string>
    <string name="tables">Tables</string>
    <string name="beds">Beds</string>
    <string name="my_favorite">My Favorite</string>
    <string name="my_shops">My Shops</string>
    <string name="profile_amp_security"><![CDATA[Profile & Security]]></string>
    <string name="order">Order</string>
    <string name="payment_methode">Payment Methode</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="details">Details</string>
    <string name="shop_now">Shop Now</string>
    <string name="chair_type">Chair Type</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="price_">$ %1s</string>
    <string name="_4_8">4.8</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="remove">-</string>
    <string name="search_items">Search Items</string>
</resources>