<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSpecial"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_150"
        android:layout_marginTop="@dimen/space_30"
        android:scaleType="centerCrop"
        android:src="@drawable/specialsummer"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:layout_marginTop="@dimen/space_20"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/imgSpecial" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnChairs"
        android:layout_width="@dimen/space_80"
        android:layout_height="@dimen/space_35"
        android:layout_marginTop="@dimen/space_15"
        android:background="@drawable/btn_category"
        android:gravity="center"
        android:text="@string/chairs"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/btnSofa"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvCategories" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSofa"
        android:layout_width="@dimen/space_80"
        android:layout_height="@dimen/space_35"
        android:background="@drawable/btn_category"
        android:gravity="center"
        android:text="@string/sofa"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnChairs"
        app:layout_constraintEnd_toStartOf="@id/btnTables"
        app:layout_constraintStart_toEndOf="@+id/btnChairs"
        app:layout_constraintTop_toTopOf="@+id/btnChairs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnTables"
        android:layout_width="@dimen/space_80"
        android:layout_height="@dimen/space_35"
        android:background="@drawable/btn_category"
        android:gravity="center"
        android:text="@string/tables"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnSofa"
        app:layout_constraintEnd_toStartOf="@id/btnBeds"
        app:layout_constraintStart_toEndOf="@+id/btnSofa"
        app:layout_constraintTop_toTopOf="@+id/btnSofa" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnBeds"
        android:layout_width="@dimen/space_80"
        android:layout_height="@dimen/space_35"
        android:background="@drawable/btn_category"
        android:gravity="center"
        android:text="@string/beds"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnTables"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toEndOf="@+id/btnTables"
        app:layout_constraintTop_toTopOf="@+id/btnTables" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/size_17"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/btnChairs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProduct"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:layout_marginTop="@dimen/space_15"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/tvProductCategory"
        app:spanCount="2"
        tools:listitem="@layout/item_product" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_20" />
</androidx.constraintlayout.widget.ConstraintLayout>